# Log

./: CMakeLists.txt
.kdev4/: log.kdev4
doc/: client.sh
src/log/: CMakeLists.txt
src/log/include/: log.h  typeOut.h  typeOutFile.h
src/log/src/: log.cpp  main.cpp  typeOutFile.cpp
